--- a/src/wine_analysis_hplc_uv/notebooks/chapter_signal_eda_by_category_2.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/chapter_signal_eda_by_category_2.ipynb
@@ -55,14 +55,9 @@
    "outputs": [],
    "source": [
     "# time std and drop vars level\n",
-    "\n",
-    "pdata = (\n",
-    "    data.dropna()\n",
-    "    .pipe(scipro.standardize_time)\n",
-    "    .pipe(lambda df: df.set_axis(axis=0, labels=df.index.total_seconds() / 60))\n",
-    "    .droplevel(\"vars\", axis=1)\n",
-    ")\n",
-    "pdata.head()"
+    "dtwprocess = eda_by_category_methods.DTWProcessing()\n",
+    "sdata = dtwprocess.std_time(data)\n",
+    "sdata.head()"
    ]
   },
   {
@@ -74,17 +69,8 @@
     "# smooth\n",
     "from scipy import signal\n",
     "\n",
-    "qdata = (\n",
-    "    pdata.melt(ignore_index=False, value_name=\"signal\").reset_index()\n",
-    "    # smooth signal with window length 5 and polynomial order 2\n",
-    "    .assign(\n",
-    "        smooth_signal=lambda df: df.groupby(\"samplecode\")[\"signal\"].transform(\n",
-    "            func=signal.savgol_filter, **dict(window_length=5, polyorder=2)\n",
-    "        )\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "qdata.head()"
+    "smdata = dtwprocess.smooth(sdata, 'samplecode','signal', 'smooth_signal')\n",
+    "smdata.head()"
    ]
   },
   {
@@ -95,17 +81,9 @@
    "source": [
     "# add bline\n",
     "\n",
+    "bcdata = dtwprocess.blinecorr(smdata, 'samplecode','smooth_signal',bcorr_label='bcorr')\n",
     "\n",
-    "def bline(x, y, i):\n",
-    "    return pd.Series(Baseline(x, assume_sorted=True).asls(y)[0], index=i)\n",
-    "\n",
-    "\n",
-    "rdata = qdata.assign(\n",
-    "    bline=qdata.groupby(\"samplecode\")[\"smooth_signal\"].transform(\n",
-    "        lambda x: Baseline(x.index).asls(x)[0]\n",
-    "    )\n",
-    ").eval(\"bcorr=smooth_signal-bline\")\n",
-    "rdata.head()"
+    "bcdata.head()"
    ]
   },
   {
@@ -117,7 +95,7 @@
     "# plot baseline correction\n",
     "\n",
     "(\n",
-    "    rdata.melt(\n",
+    "    bcdata.melt(\n",
     "        id_vars=[\"samplecode\", \"wine\", \"mins\"], var_name=\"siglabel\", value_name=\"sig\"\n",
     "    ).pipe(\n",
     "        lambda df: so.Plot(data=df, x=\"mins\", y=\"sig\", color=\"siglabel\")\n",
@@ -139,10 +117,12 @@
    "source": [
     "# detect peaks prior to alignment\n",
     "\n",
-    "sdata = rdata.assign(\n",
-    "    bcorr_peaks=lambda df: df.groupby(\"samplecode\")[\"bcorr\"].transform(lambda x: x.iloc[signal.find_peaks(x)[0]])\n",
-    ")\n",
-    "sdata.head()"
+    "peaks = eda_by_category_methods.Peaks()\n",
+    "\n",
+    "pddata = peaks.peakdetect(bcdata, grouper='samplecode', signal_label='bcorr',col_label='unaligned_peaks')\n",
+    "\n",
+    "\n",
+    "pddata.head()"
    ]
   },
   {
@@ -153,7 +133,7 @@
    "source": [
     "# plot to display peaks\n",
     "(\n",
-    "    sdata.melt(\n",
+    "    pddata.melt(\n",
     "        id_vars=[\"samplecode\", \"wine\", \"mins\"], var_name=\"siglabel\", value_name=\"sig\"\n",
     "    )\n",
     "    .loc[lambda df: (df.mins < 5) & (df.mins > 3)]\n",
@@ -162,7 +142,7 @@
     "    .pipe(\n",
     "        lambda df: so.Plot(data=df, x=\"mins\", color=\"samplecode\")\n",
     "        .add(so.Line(), y=\"bcorr\")\n",
-    "        .add(so.Dot(), y=\"bcorr_peaks\")\n",
+    "        .add(so.Dot(), y=\"unaligned_peaks\")\n",
     "    )\n",
     ")"
    ]
@@ -171,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For testing purposes, we're only interested in the top 10 peaks"
+    "For testing purposes, we're only interested in the top 20 peaks"
    ]
   },
   {
@@ -182,19 +162,25 @@
    "source": [
     "# get top 20 peaks of the unaligned set\n",
     "\n",
-    "tdata = sdata.assign(\n",
-    "    bcorr_top_20=lambda df: df.groupby(\"samplecode\", group_keys=False)[\n",
-    "        \"bcorr_peaks\"\n",
-    "    ].nlargest(20)\n",
-    ")\n",
-    "\n",
+    "tpdata=peaks.top_peaks(pddata, 'samplecode','unaligned_peaks',20,'top_20_unaligned')\n",
+    "tpdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# plot the peaks on top of the curves\n",
+    "\n",
+    "peak_y='top_20_unaligned'\n",
     "display(\n",
-    "    tdata.loc[lambda df: df.mins < 21].pipe(\n",
+    "    tpdata.loc[lambda df: df.mins < 21].pipe(\n",
     "        lambda df: (\n",
     "            so.Plot(df, x=\"mins\", color=\"samplecode\")\n",
     "            .add(so.Line(), y=\"bcorr\")\n",
-    "            .add(so.Dot(), y=\"bcorr_top_20\")\n",
+    "            .add(so.Dot(), y=peak_y)\n",
     "            .plot()\n",
     "        )\n",
     "    )\n",
@@ -202,25 +188,17 @@
     "\n",
     "# peak table\n",
     "(\n",
-    "    tdata.pipe(\n",
-    "        lambda df: (\n",
-    "            df\n",
-    "            if display(\n",
-    "                df.loc[:, [\"samplecode\", \"wine\", \"mins\", \"bcorr_top_20\"]]\n",
-    "                .dropna()\n",
-    "                .assign(n_peak=lambda df: df.groupby(\"samplecode\").cumcount())\n",
-    "                .pivot(\n",
-    "                    columns=[\"samplecode\", \"wine\"],\n",
-    "                    index=[\"n_peak\"],\n",
-    "                    values=[\"mins\", \"bcorr_top_20\"],\n",
-    "                )\n",
-    "                .reorder_levels([1, 2, 0], axis=1)\n",
-    "                .sort_index(axis=1)\n",
-    "            )\n",
-    "            else df\n",
-    "        )\n",
-    "    )\n",
+    "    \n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "peaks.peak_table(tpdata, ['samplecode','wine'],'top_20_unaligned','peak_n','mins')"
    ]
   },
   {
@@ -243,100 +221,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define a class to handle DTW methods\n",
-    "\n",
-    "class ApplyDTW():\n",
-    "    \n",
-    "    def align(self, data, primary_key, siglabel, aligned_label: str, kwargs:dict=dict()):\n",
-    "        \"\"\"\n",
-    "        For a passed long format df find the reference signal and align, assigning back\n",
-    "        to the passed frame\n",
-    "        \n",
-    "        TODO: add internal validation\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        ref_idx = self.find_ref(data, primary_key, siglabel)\n",
-    "        \n",
-    "        \n",
-    "        ref_signal = data.loc[lambda df: df.samplecode==ref_idx][siglabel]\n",
-    "        \n",
-    "        adata = (\n",
-    "            data\n",
-    "            .assign(**{aligned_label:data\n",
-    "                       .groupby(primary_key)[siglabel]\n",
-    "                       .transform(self.applydtw, ref_signal)\n",
-    "                    }\n",
-    "                       )\n",
-    "                           )\n",
-    "        \n",
-    "        return adata\n",
-    "        \n",
-    "    \n",
-    "    def applydtw(self, query, ref, kwargs: dict = dict()):\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        apply dtw\n",
-    "        \"\"\"\n",
-    "        # subset signal by warping path\n",
-    "        # reset index to enable reindexing after Apply functions (i.e. transform), \n",
-    "        # otherwise get duplicate index error\n",
-    "        \n",
-    "        aligned_query = (query.iloc[dtw(x=query, y=ref, **kwargs).get_warping_path()]\n",
-    "        .reset_index(drop=True).values)\n",
-    "        \n",
-    "        aligned_s = pd.Series(aligned_query, index=query.index)\n",
-    "        \n",
-    "        return aligned_query\n",
-    "    \n",
-    "    def find_ref(self, data, primary_key:str, siglabel:str)->str:\n",
-    "        \"\"\"\n",
-    "        pass long form df and return the idx string for the reference sample\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        tidy_data = data.pivot_table(index='mins',columns=primary_key, values=siglabel)\n",
-    "\n",
-    "        \n",
-    "        ref_idx = (\n",
-    "            tidy_data\n",
-    "            .corr()\n",
-    "            .mean()\n",
-    "            .loc[lambda df: df == df.max()]\n",
-    "            .index[0]\n",
-    "        )\n",
-    "        return ref_idx\n",
-    "        \n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# ref = ApplyDTW().find_ref(tdata, 'samplecode','bcorr')\n",
-    "align = ApplyDTW().align(tdata, primary_key='samplecode',siglabel='bcorr', aligned_label='aligned')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(align)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# align the dataset\n",
     "\n",
-    "udata = dtwalignment(grouper=['samplecode','wine'], data=tdata, signal_label='bcorr', dtw_kwargs=dict(window_type='sakoechiba',window_size=500), ref_label=reference, aligned_signal_name='aligned_sig_1')\n",
-    "udata.head()"
+    "dtwalign = eda_by_category_methods.ApplyDTW()\n",
+    "\n",
+    "# aligned data\n",
+    "adata = dtwalign.align(tpdata, primary_key='samplecode',siglabel='bcorr', aligned_label='aligned')\n",
+    "adata.head()"
    ]
   },
   {
@@ -348,13 +239,13 @@
     "# plot aligned dataset\n",
     "\n",
     "(\n",
-    "    udata\n",
+    "    adata\n",
     "    .loc[lambda df: df.mins<20]\n",
     "    .pipe(\n",
     "        lambda df: so.Plot(data=df, x=\"mins\",color='samplecode')\n",
     "        .layout(size=(5,3))\n",
     "        .add(\n",
-    "            so.Line(), y=\"aligned_sig_1\"\n",
+    "            so.Line(), y=\"aligned\"\n",
     "        )\n",
     "        \n",
     "    )\n",
@@ -369,9 +260,9 @@
    "source": [
     "# plot aligned against unaligned set\n",
     "(\n",
-    "    udata\n",
+    "    adata\n",
     "    .loc[lambda df: df.mins<20]\n",
-    "    .melt(id_vars=['mins','samplecode','wine'],var_name='siglabel',value_vars=['bcorr','aligned_sig_1'],value_name='sig_val')\n",
+    "    .melt(id_vars=['mins','samplecode','wine'],var_name='siglabel',value_vars=['bcorr','aligned'],value_name='sig_val')\n",
     "    .pipe(\n",
     "        lambda df: so.Plot(data=df, x=\"mins\",color='siglabel')\n",
     "        .layout(size=(15,10))\n",
@@ -391,13 +282,10 @@
    "outputs": [],
    "source": [
     "# detect peaks in aligned set\n",
+    "# aligned peaks data\n",
+    "apddata = peaks.peakdetect(adata, 'samplecode',signal_label='aligned',col_label='peaks_aligned')\n",
     "\n",
-    "vdata = (udata\n",
-    " .assign(\n",
-    "    peaks_aligned=lambda df: df.groupby(\"samplecode\")[\"aligned_sig_1\"].transform(lambda x: x.iloc[signal.find_peaks(x)[0]])\n",
-    ")\n",
-    ")\n",
-    "vdata.head()"
+    "apddata.head()"
    ]
   },
   {
@@ -407,13 +295,13 @@
    "outputs": [],
    "source": [
     "# add column of top 20 peaks in aligned peak set\n",
-    "\n",
-    "wdata = vdata.assign(\n",
+    "# top aligned peaks data\n",
+    "tappdata = apddata.assign(\n",
     "    aligned_top_20=lambda df: df.groupby(\"samplecode\", group_keys=False)[\n",
     "        \"peaks_aligned\"\n",
     "    ].nlargest(20)\n",
     ")\n",
-    "wdata.info()"
+    "tappdata.info()"
    ]
   },
   {
@@ -425,21 +313,7 @@
     "# construct and display peak table\n",
     "\n",
     "aligned_peak_table = (\n",
-    "    wdata.pipe(\n",
-    "        lambda df: \n",
-    "                df\n",
-    "                .loc[:,['mins','samplecode','wine','aligned_top_20']]\n",
-    "                .dropna()\n",
-    "                .assign(n_peak=lambda df: df.groupby(\"samplecode\").cumcount())\n",
-    "                .pipe(lambda df: df if display(df) else df) # display df\n",
-    "                .pivot_table(\n",
-    "                    columns=[\"samplecode\", \"wine\"],\n",
-    "                    index=[\"n_peak\"],\n",
-    "                    values=[\"mins\", \"aligned_top_20\"],\n",
-    "                )\n",
-    "                .reorder_levels([1, 2, 0], axis=1)\n",
-    "                .sort_index(axis=1)\n",
-    "        )\n",
+    "    tappdata.pipe(peaks.peak_table, grouper=['samplecode','wine'],peaks_label= 'aligned_top_20', peak_num_label='peak_n', peak_idx_label='mins')\n",
     "    )\n",
     "aligned_peak_table"
    ]
@@ -453,11 +327,11 @@
     "# plot overlay signals and top 20 peaks\n",
     "\n",
     "(\n",
-    "    wdata\n",
+    "    tappdata\n",
     "    .loc[lambda df: df.mins<20]\n",
     "    .pipe(lambda df:\n",
     "        so.Plot(df, x='mins', color='samplecode')\n",
-    "        .add(so.Line(),y='aligned_sig_1')\n",
+    "        .add(so.Line(),y='aligned')\n",
     "        .add(so.Dot(), y='aligned_top_20')\n",
     "        .facet(col='samplecode',wrap=2)\n",
     "        .layout(size=(15,10))\n",
@@ -473,14 +347,14 @@
    "source": [
     "# plot overlay aligned set, unaligned peaks, aligned peaks as dots\n",
     "\n",
-    "plot_peak_data = wdata.melt(id_vars=['mins','samplecode','wine'],value_vars=['aligned_top_20','bcorr_top_20'], var_name='peak_label',value_name='sig').dropna()\n",
+    "plot_peak_data = tappdata.melt(id_vars=['mins','samplecode','wine'],value_vars=['aligned_top_20','top_20_unaligned'], var_name='peak_label',value_name='sig').dropna()\n",
     "\n",
     "(\n",
-    "    wdata\n",
+    "    tappdata\n",
     "    .loc[lambda df: df.mins<20]\n",
     "    .pipe(lambda df:\n",
     "        so.Plot(df, x='mins')\n",
-    "        .add(so.Line(), y='aligned_sig_1',color='samplecode')\n",
+    "        .add(so.Line(), y='aligned',color='samplecode')\n",
     "        .add(so.Dot(),data=plot_peak_data.loc[lambda df: df.mins<20], alpha='peak_label', color='samplecode',x='mins',y='sig')\n",
     "        # .facet(col='samplecode',wrap=2)\n",
     "        .layout(size=(15,10))\n",
@@ -494,7 +368,18 @@
    "source": [
     "As we can see in the above graphic, The majority of the peaks have lost amplitude, and torbreck-struie has straight up lost a peak at 18 mins. We need a better DTW algorithm.\n",
     "\n",
-    "Need to develop a more reliable alignment method. But we also should look at whether torbreck-struie itself is the issue. First what happens if we exclude it during warping?"
+    "Need to develop a more reliable alignment method. But we also should look at whether torbreck-struie itself is the issue. First what happens if we exclude it during warping?\n",
+    "\n",
+    "Continue this in another book. export the processed data to parquet\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tappdata.loc[:,['mins','samplecode','wine','signal','bcorr']].to_parquet(\"/Users/jonathan/mres_thesis/wine_analysis_hplc_uv/src/wine_analysis_hplc_uv/notebooks/processed_data.parquet\")"
    ]
   }
  ],
