--- a/src/wine_analysis_hplc_uv/notebooks/plotting_cheatsheet.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/plotting_cheatsheet.ipynb
@@ -84,6 +84,34 @@
    "source": [
     "legend can be added by calling `.add_legend` on Axes object returned by FacetGrid mapping"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Contour plots\n",
+    "\n",
+    "From a pandas dataframe of single column arrays (i.e. columns) use `tricontourf` to create contour plots:\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.colors import LogNorm\n",
+    "\n",
+    "penguins = penguins.fillna(0)\n",
+    "\n",
+    "c = plt.tricontourf(penguins.bill_length_mm, penguins.flipper_length_mm, penguins.body_mass_g, level=10, norm=LogNorm(vmax=1E5, clip=1))\n",
+    "artists, labels= c.legend_elements()\n",
+    "plt.legend(artists, labels,bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)"
+   ]
   }
  ],
  "metadata": {
