move multiindexed base signal processing tob "old_signal_processing", replace with signalprocessor class moved from mcr_methods
Former-commit-id: c66b5d6199ff41bfee6439b43bf374c32d198061
Former-commit-id: 9e43dcc960823a3a26fc5d7f63f699b5e15473eb
Former-commit-id: 78c278d1de5a8d65a1d6631123ef24bf555abb91

--- a/src/wine_analysis_hplc_uv/notebooks/2023-09-07.investigating_signal_smoothing.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/2023-09-07.investigating_signal_smoothing.ipynb
@@ -14,7 +14,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from wine_analysis_hplc_uv import definitions\n",
-    "from wine_analysis_hplc_uv.signal_processing.mindex_signal_processing import SignalProcessor\n",
+    "from wine_analysis_hplc_uv.old_signal_processing.mindex_signal_processing import SignalProcessor\n",
     "from pybaselines import Baseline\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
