--- a/src/wine_analysis_hplc_uv/notebooks/2023_10_18.chapter.results.signal_eda_by_category.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/2023_10_18.chapter.results.signal_eda_by_category.ipynb
@@ -64,7 +64,7 @@
     "import seaborn as sns\n",
     "import seaborn.objects as so\n",
     "from wine_analysis_hplc_uv.notebooks.dtw_methods import DTWNotebookMethods\n",
-    "from wine_analysis_hplc_uv.signal_processing.mindex_signal_processing import (\n",
+    "from wine_analysis_hplc_uv.old_signal_processing.mindex_signal_processing import (\n",
     "    SignalProcessor,\n",
     ")\n",
     "import seaborn as sns\n",
