--- a/src/wine_analysis_hplc_uv/notebooks/2023-08-18.warping_with_python-dtw.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/2023-08-18.warping_with_python-dtw.ipynb
@@ -55,7 +55,7 @@
     "from wine_analysis_hplc_uv import definitions\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from wine_analysis_hplc_uv.signal_processing.mindex_signal_processing import (\n",
+    "from wine_analysis_hplc_uv.old_signal_processing.mindex_signal_processing import (\n",
     "    SignalProcessor,\n",
     ")\n",
     "\n",
