--- a/src/wine_analysis_hplc_uv/notebooks/2023-09-07.offset_and_scale_y_axis.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/2023-09-07.offset_and_scale_y_axis.ipynb
@@ -14,7 +14,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from wine_analysis_hplc_uv import definitions\n",
-    "from wine_analysis_hplc_uv.signal_processing.mindex_signal_processing import SignalProcessor\n",
+    "from wine_analysis_hplc_uv.old_signal_processing.mindex_signal_processing import SignalProcessor\n",
     "from pybaselines import Baseline\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
