--- a/src/wine_analysis_hplc_uv/notebooks/2023-09-25.processing_cup_rw_dset.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/2023-09-25.processing_cup_rw_dset.ipynb
@@ -36,7 +36,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from wine_analysis_hplc_uv.notebooks.dtw_methods import DTWNotebookMethods, AlignPipe, RelPlotDFBuilder\n",
-    "from wine_analysis_hplc_uv.signal_processing.mindex_signal_processing import (\n",
+    "from wine_analysis_hplc_uv.old_signal_processing.mindex_signal_processing import (\n",
     "    SignalProcessor,\n",
     ")\n",
     "\n",
