--- a/src/wine_analysis_hplc_uv/notebooks/2023-10-17.dynamic_time_warping.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/2023-10-17.dynamic_time_warping.ipynb
@@ -121,7 +121,7 @@
     "from wine_analysis_hplc_uv import definitions\n",
     "import seaborn as sns\n",
     "from wine_analysis_hplc_uv.notebooks.dtw_methods import DTWNotebookMethods\n",
-    "from wine_analysis_hplc_uv.signal_processing.mindex_signal_processing import (\n",
+    "from wine_analysis_hplc_uv.old_signal_processing.mindex_signal_processing import (\n",
     "    SignalProcessor,\n",
     ")\n",
     "\n",
