adds DataExtractor, a class providing an API for data extraction via sql queries. Replaced Raw3DDset with an invocation of this class where used.
Former-commit-id: 8d78f3893a12c513fbbf8d53eaa4c15a97869801
Former-commit-id: 3782574fb3d35af88eea4f303cdf656226e92d5d
Former-commit-id: 7f624d3fd64b6ba5f68ddd9a809e615b0489ca8a

--- a/src/wine_analysis_hplc_uv/notebooks/2023-10-30.pca_sample.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/2023-10-30.pca_sample.ipynb
@@ -47,7 +47,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset = pd.read_parquet(\"/Users/jonathan/mres_thesis/wine_analysis_hplc_uv/src/wine_analysis_hplc_uv/notebooks/tidy_3d_dset_raw.parquet\")\n",
+    "from wine_analysis_hplc_uv.notebooks.xgboost.dataextract import RawTestSet3DCreator\n",
+    "from wine_analysis_hplc_uv import definitions\n",
+    "rtsc = RawTestSet3DCreator(definitions.DB_PATH)\n",
+    "\n",
+    "dset = rtsc.df\n",
     "dset.head()"
    ]
   },
@@ -57,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d111=dset.loc[lambda df: df.samplecode=='111'].drop(['detection','samplecode','wine','color','varietal','id','mins'],axis=1).reset_index(drop=True).rename_axis('i')\n",
+    "d111=dset.loc[lambda df: df.code_wine.str.contains('111')].drop(['detection','code_wine','color','varietal','id','mins'],axis=1).reset_index(drop=True).rename_axis('i')\n",
     "\n",
     "d111"
    ]
@@ -145,7 +149,7 @@
     "    return df\n",
     "\n",
     "m_d111 = smooth(m_d111, 'wavelength','abs', 'smooth', savgol_kws=dict(window_length=4, polyorder=2))\n",
-    "m_d111.groupby('wavelength').get_group('256').pipe(lambda x: so.Plot(data=x, x='i',y='smooth').add(so.Line())).show()"
+    "m_d111.groupby('wavelength').get_group('nm_256').pipe(lambda x: so.Plot(data=x, x='i',y='smooth').add(so.Line())).show()"
    ]
   },
   {
@@ -191,7 +195,7 @@
     "# plot overlay of baseline and original signal\n",
     "(m_d111\n",
     " .groupby('wavelength')\n",
-    ".get_group('256')\n",
+    ".get_group('nm_256')\n",
     ".loc[:,['i','smooth','bline']]\n",
     ".pipe(lambda df: df if display(df) else df) # display df\n",
     ".melt(var_name='signal', value_name='abs', id_vars='i')\n",
@@ -222,7 +226,7 @@
     "(\n",
     "    m_d111_subset\n",
     "    .groupby('wavelength')\n",
-    "    .get_group('256')\n",
+    "    .get_group('nm_256')\n",
     "    .reset_index()\n",
     "    .pipe(lambda x: so.Plot(data=x, x='i',y='bcorr').add(so.Line()\n",
     "    )\n",
@@ -247,7 +251,7 @@
     "\n",
     "m_d111_subset = scale_and_center(m_d111_subset, 'bcorr')\n",
     "\n",
-    "m_d111_subset.groupby('wavelength').get_group('256').pipe(lambda x: so.Plot(data=x, x='i',y='scale_center').add(so.Line()).show())\n"
+    "m_d111_subset.groupby('wavelength').get_group('nm_256').pipe(lambda x: so.Plot(data=x, x='i',y='scale_center').add(so.Line()).show())\n"
    ]
   },
   {
@@ -342,7 +346,7 @@
     "\n",
     "display(m_d111_subset.head())\n",
     "\n",
-    "m_d111_subset.groupby(\"wavelength\").get_group(\"256\").pipe(\n",
+    "m_d111_subset.groupby(\"wavelength\").get_group(\"nm_256\").pipe(\n",
     "    lambda df: so.Plot(df, x=\"i\").add(so.Line(), y=\"bcorr\").add(so.Dot(), y=\"peaks\")\n",
     ")"
    ]
@@ -357,7 +361,7 @@
     "\n",
     "(m_d111_subset\n",
     ".loc[lambda df: df\n",
-    "     .wavelength.isin(['190','256','400'])]\n",
+    "     .wavelength.isin(['nm_190','nm_256','nm_400'])]\n",
     ".pipe(\n",
     "    lambda df: so.Plot(df, x=\"i\")\n",
     "    .facet('wavelength')\n",
@@ -374,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m_d111_subset.groupby(\"wavelength\").get_group(\"190\").pipe(\n",
+    "m_d111_subset.groupby(\"wavelength\").get_group(\"nm_190\").pipe(\n",
     "    lambda df: so.Plot(df, x=\"i\").add(so.Line(), y=\"bcorr\").add(so.Dot(), y=\"peaks\")\n",
     ")"
    ]
