update Preprocessor import calls, added dependency imports to module
Former-commit-id: c29011aebb873b07367e21d29e0dc7a4236cbd6c
Former-commit-id: eb4d10218f2dab6c220846fe1b3f574ef6e3b13f
Former-commit-id: 71fa8215e7d02718c039ea9d94f365a07e4f03d7

--- a/src/wine_analysis_hplc_uv/notebooks/2023-11-01.pca-xgboost/2023-11-02_prep_reds_dset_for_analysis.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/2023-11-01.pca-xgboost/2023-11-02_prep_reds_dset_for_analysis.ipynb
@@ -30,7 +30,8 @@
     "import matplotlib.pyplot as plt\n",
     "from wine_analysis_hplc_uv.notebooks.mcr import mcr_methods\n",
     "from sklearn import decomposition\n",
-    "from wine_analysis_hplc_uv.signal_analysis.signal_analysis import SignalAnalyzer"
+    "from wine_analysis_hplc_uv.signal_analysis.signal_analysis import SignalAnalyzer\n",
+    "from wine_analysis_hplc_uv.signal_processing import signal_processing"
    ]
   },
   {
@@ -39,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DSetPrepper(mcr_methods.Preprocessing, mcr_methods.PCA, decomposition.PCA, SignalAnalyzer):\n",
+    "class DSetPrepper(signal_processing.Preprocessing, mcr_methods.PCA, decomposition.PCA, SignalAnalyzer):\n",
     "    \n",
     "    def __init__(self):\n",
     "        return None\n",
