--- a/src/wine_analysis_hplc_uv/notebooks/mcr/2023-11-01-mcr_als_pipeline_prototype.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/mcr/2023-11-01-mcr_als_pipeline_prototype.ipynb
@@ -31,11 +31,13 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn.objects as so\n",
     "import seaborn as sns\n",
-    "from mcr_methods import Preprocessing, MCR_Analysis\n",
+    "from wine_analysis_hplc_uv.notebooks.mcr.mcr_methods import MCR_Analysis\n",
     "from pymcr.constraints import ConstraintNonneg, ConstraintNorm\n",
     "from pymcr.regressors import OLS, NNLS\n",
     "\n",
-    "mcr_pro = Preprocessing()\n",
+    "from wine_analysis_hplc_uv.signal_processing.signal_processing import Preprocessing\n",
+    "\n",
+    "prepro= Preprocessing()\n",
     "mcr_anal = MCR_Analysis()"
    ]
   },
@@ -121,11 +123,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "m_d111.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# smooth\n",
     "\n",
-    "m_d111 = mcr_pro.smooth(\n",
-    "    m_d111, \"wavelength\", \"abs\", \"smooth\", savgol_kws=dict(window_length=4, polyorder=2)\n",
-    ")\n",
+    "m_d111 = (m_d111\n",
+    "          .assign(**{'smooth': lambda df: df.pipe(\n",
+    "                     prepro._smooth, \n",
+    "                         grouper=\"wavelength\",\n",
+    "                         col=\"abs\",\n",
+    "                         savgol_kws=dict(window_length=4, polyorder=2)\n",
+    "          )\n",
+    "                         }\n",
+    "))\n",
+    "                       \n",
+    "m_d111.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "m_d111.groupby(\"wavelength\").get_group(\"256\").pipe(\n",
     "    lambda x: so.Plot(data=x, x=\"i\", y=\"smooth\").add(so.Line())\n",
     ").show()"
@@ -139,15 +166,26 @@
    "source": [
     "# bcorr\n",
     "\n",
-    "m_d111 = mcr_pro.baseline_subtract(m_d111, \"smooth\", \"wavelength\", \"bcorr\")\n",
+    "m_d111 = (m_d111\n",
+    "          .assign(**{'bcorr':lambda df: df\n",
+    "                     .pipe(prepro._baseline_subtract, col=\"smooth\", grouper=\"wavelength\")})\n",
+    ")\n",
+    "    \n",
     "\n",
-    "display(m_d111.head())\n",
-    "\n",
-    "# plot overlay of baseline and original signal\n",
+    "display(m_d111.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot overlay of bcorr and original signal\n",
     "(\n",
     "    m_d111.groupby(\"wavelength\")\n",
     "    .get_group(\"256\")\n",
-    "    .loc[:, [\"i\", \"smooth\", \"bline\"]]\n",
+    "    .loc[:, [\"i\", \"smooth\", \"bcorr\"]]\n",
     "    .pipe(lambda df: df if display(df) else df)  # display df\n",
     "    .melt(var_name=\"signal\", value_name=\"abs\", id_vars=\"i\")\n",
     "    .pipe(lambda df: df if display(df) else df)  # display df\n",
@@ -169,7 +207,7 @@
    "outputs": [],
    "source": [
     "# subset to <4000\n",
-    "m_d111_subset = mcr_pro.subset(m_d111, \"i\", 4000)\n",
+    "m_d111_subset = prepro.subset(m_d111, \"i\", 4000)\n",
     "\n",
     "display(m_d111_subset.head())\n",
     "\n",
@@ -189,7 +227,7 @@
    "source": [
     "# scale and center\n",
     "\n",
-    "m_d111_subset = mcr_pro.scale_and_center(m_d111_subset, \"bcorr\")\n",
+    "m_d111_subset = prepro.scale_and_center(m_d111_subset, \"bcorr\")\n",
     "\n",
     "m_d111_subset.groupby(\"wavelength\").get_group(\"256\").pipe(\n",
     "    lambda x: so.Plot(data=x, x=\"i\", y=\"scale_center\").add(so.Line()).show()\n",
