--- a/src/wine_analysis_hplc_uv/notebooks/2023-10-30.pca_sample.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/2023-10-30.pca_sample.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wine_analysis_hplc_uv.notebooks.xgboost.dataextract import RawTestSet3DCreator\n",
+    "from wine_analysis_hplc_uv.notebooks.xgboost_modeling.dataextract import RawTestSet3DCreator\n",
     "from wine_analysis_hplc_uv import definitions\n",
     "rtsc = RawTestSet3DCreator(definitions.DB_PATH)\n",
     "\n",
