organised notebooks contents by topic
Former-commit-id: 8676d5e102f11ca905c039c08943377fdd1493eb
Former-commit-id: c4413f65ebefa2531ad0338e541c77a3b447ebda
Former-commit-id: ed76a68651308a0d1a400f1b92cae3a4cd01caca

--- a/src/wine_analysis_hplc_uv/notebooks/2023-10-24.creating_3d_dataset.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/2023-10-24.creating_3d_dataset.ipynb
@@ -9,7 +9,8 @@
     "# 2023-10-24\n",
     "\n",
     "import duckdb as db\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from wine_analysis_hplc_uv import definitions"
    ]
   },
   {
@@ -19,7 +20,7 @@
    "outputs": [],
    "source": [
     "con = db.connect(\n",
-    "    \"/Users/jonathan/mres_thesis/wine_analysis_hplc_uv/src/wine_analysis_hplc_uv/notebooks/testdb.db\"\n",
+    "    definitions.DB_PATH\n",
     ")"
    ]
   },
@@ -90,7 +91,7 @@
    "outputs": [],
    "source": [
     "# drop wavelengths > 400 as not all samples recorded between 400 and 600nm\n",
-    "idx = data.columns.get_loc(\"400\")\n",
+    "idx = data.columns.get_loc(\"nm_400\")\n",
     "\n",
     "\n",
     "data = data.loc[:, data.columns[: idx + 1]]\n",
@@ -117,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data.dropna()\n",
+    "data = data.dropna().drop(\"id:1\",axis=1)\n",
     "data"
    ]
   },
@@ -129,7 +130,7 @@
    "source": [
     "# write to parquet file before going any further.\n",
     "\n",
-    "path = \"/Users/jonathan/mres_thesis/wine_analysis_hplc_uv/src/wine_analysis_hplc_uv/notebooks/tidy_3d_dset_raw.parquet\"\n",
+    "path = definitions.RAW3DDSET\n",
     "\n",
     "data.to_parquet(path)"
    ]
@@ -141,6 +142,36 @@
    "outputs": [],
    "source": [
     "pd.read_parquet(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.loc[:,['id','varietal']].drop_duplicates(keep='first').varietal.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outlier_codes = definitions.RAWSAMPLEOUTLIERS\n",
+    "\n",
+    "outliers = data.query(\"samplecode in @outlier_codes\")\n",
+    "outliers.set_index(['detection','samplecode','wine','color','varietal','id']).loc[:,['mins','nm_256']].groupby('id').plot(x='mins',y='nm_256')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outliers.loc[:,[\"samplecode\",\"varietal\"]].drop_duplicates()"
    ]
   }
  ],
