turn off parquet file creation

--- a/src/wine_analysis_hplc_uv/notebooks/2023-10-24.creating_3d_dataset.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/2023-10-24.creating_3d_dataset.ipynb
@@ -128,11 +128,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write to parquet file before going any further.\n",
+    "# # write to parquet file before going any further.\n",
     "\n",
-    "path = definitions.RAW3DDSET\n",
+    "# path = definitions.RAW3DDSET\n",
     "\n",
-    "data.to_parquet(path)"
+    "# data.to_parquet(path)"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.read_parquet(path)"
+    "# pd.read_parquet(path)"
    ]
   },
   {
