--- a/src/wine_analysis_hplc_uv/notebooks/xgboost_modeling/2023-11-15.todo.md
+++ b/src/wine_analysis_hplc_uv/notebooks/xgboost_modeling/2023-11-15.todo.md
@@ -1,12 +1,14 @@
 glorified random number generator.
 
-0. finish adding in `cross_validate`
-1. merge current state back into main
-2. cross validate with appropriate multiclass scores. which ones are appropriate?
+0. finish adding in `cross_validate` X
+1. merge current state back into main X
+2. cross validate with appropriate multiclass scores. which ones are appropriate? X
+
 3. grid search
 4. run until ~85% score occurs
 5. figure out how to extract models
 6. produce report on best model, best params etc
+
 7. Do the same for CUPRAC
 
 PCA analysis
